<resources>
    <string name="app_name">FoodAdditive</string>
    <string name="app_name_rus"><b>Е</b> добавки</string>

    <string name="show_all">Показать все</string>
    <string name="danger_0">Нулевая опасность</string>
    <string name="danger_1">Очень низкая опастность</string>
    <string name="danger_2">Низкая опастность</string>
    <string name="danger_3">Средняя опастность</string>
    <string name="danger_4">Высокая опастность</string>
    <string name="danger_5">Очень высокая опастность</string>

    <string name="action_switch_recycler_view">Переключить вид</string>
    <string name="search">Поиск...</string>
    <string name="attention_high_toxic">Высокая токсичность!</string>

    <string name="dialog_title">Использование в пищевой промышленности</string>
    <string name="dialog_button_ok">OK</string>
    <string name="fab_description">Избранное</string>
    <string name="snackBar_add">Добавка E%1$s добавлена в избранное</string>
    <string name="snackBar_delete">Добавка E%1$s удалена из избранного</string>
    <string name="title_favorites">Мои добавки</string>
    <string name="title_all_food_add">Добавки</string>
    <string name="title_info">Информация</string>

    <string name="e_number">E%1$s</string>
    <string name="e_origin">Происхождение: %1$s</string>
    <string name="trim_origin">происхождение</string>
    <string name="e_type">Категория: %1$s</string>
    <string name="e_danger">Уровень опастности: %1$d</string>
    <string name="e_description">Описание</string>
    <string name="e_benefit">Польза для здоровья</string>
    <string name="e_harm">Вред для здоровья</string>
    <string name="e_use_country">Законодательство</string>
    <string name="button_food">продукты</string>

    <string name="information_description">\t\t Все добавки условно разделены на <b>6 уровней опасности</b> — от <b>«нулевой»</b> до <b>«очень высокой»</b>.
        \n\t\t <b>Базовый, нулевой уровень</b> - натуральные добавки (растительного, животного или минерального происхождения), положительно влияющие на здоровье человека. Это различные витамины и минералы, ежедневно попадающие в организм естественным путем при употреблении натуральных продуктов.
        \n\t\t Добавки, полученные искусственным путем, называются «идентичными натуральным». Им присвоен <b>один отрицательный балл</b>. С точки зрения науки - это "точные копии" натуральных добавок, но при их синтезировании в конечный продукт могут попадать примеси металлов или другие побочные продукты химических реакций.
        \n\t\t Добавки, не встречающиеся в природе и получаемые только путем синтезирования. Им присвоено <b>два отрицательных балла</b>,так как такие добавки не свойственны организму и в настоящее время мало изучены.
        \n\t\t Если научные исследования показывают, что при употреблении продуктов, содержащих определенную добавку, у части населения могут проявляться негативные явления в виде аллергических реакций, повышения давления, расстройства желудка и прочих «легких» болезней, то такой добавке присвоено <b>два отрицательных балла</b>.
        \n\t\t Существует ряд добавок, получаемых из растений и в то же время повышающих риск раковых заболеваний. Таким добавкам присвоен <b>один отрицательный бал</b>.
        \n\t\t Часть искусственных или даже синтетических добавок (каротины, витамины A, B, C и др.) влияют на организм положительно. Таким добавкам добавлен <b>один положительный бал</b>.
        \n\t\t Суммируя все негативные или положительные факторы, можно довольно точно отнести добавку к определенному уровню опасности.</string>


</resources>