<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".ui.DetailFoodAddFragment">


            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/start_horizontal_guideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_begin="@dimen/padding_large" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/start_vertical_guideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="@dimen/padding_large" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/end_vertical_guideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_end="@dimen/padding_large" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/end_horizontal_guideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_end="@dimen/padding_bottom_fragment" />

            <TextView
                android:id="@+id/food_add_number_text"
                android:layout_width="150dp"
                android:layout_height="0dp"
                android:layout_marginBottom="@dimen/margin_ordinary"
                android:background="@drawable/rect_textview"
                android:gravity="center"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline3"
                android:textColor="?attr/colorOnPrimary"
                app:layout_constraintBottom_toTopOf="@+id/barrier"
                app:layout_constraintStart_toStartOf="@+id/start_vertical_guideline"
                app:layout_constraintTop_toTopOf="@+id/start_horizontal_guideline"
                tools:text="E100" />

            <TextView
                android:id="@+id/food_add_name_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_large"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
                app:layout_constraintEnd_toEndOf="@+id/end_vertical_guideline"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/food_add_number_text"
                app:layout_constraintTop_toTopOf="@+id/start_horizontal_guideline"
                tools:text="Куркумины" />

            <TextView
                android:id="@+id/food_add_origin_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
                app:layout_constraintEnd_toStartOf="@+id/end_vertical_guideline"
                app:layout_constraintStart_toStartOf="@+id/food_add_name_text"
                app:layout_constraintTop_toBottomOf="@+id/food_add_name_text"
                tools:text="Происхождение: растительное" />

            <TextView
                android:id="@+id/food_add_type_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
                app:layout_constraintEnd_toStartOf="@+id/end_vertical_guideline"
                app:layout_constraintStart_toStartOf="@+id/food_add_name_text"
                app:layout_constraintTop_toBottomOf="@+id/food_add_origin_text"
                tools:text="Категория: красители" />

            <TextView
                android:id="@+id/food_add_danger_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
                app:layout_constraintEnd_toStartOf="@+id/end_vertical_guideline"
                app:layout_constraintStart_toStartOf="@+id/food_add_name_text"
                app:layout_constraintTop_toBottomOf="@+id/food_add_type_text"
                tools:text="Уровень опастности: очень низкая" />

            <Button
                android:id="@+id/food_add_food_button"
                style="@style/Widget.MaterialComponents.Button.Icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_food"
                app:icon="@drawable/ic_food"
                app:layout_constraintEnd_toEndOf="@+id/end_vertical_guideline"
                app:layout_constraintStart_toStartOf="@+id/food_add_name_text"
                app:layout_constraintTop_toBottomOf="@+id/food_add_danger_text" />

            <androidx.constraintlayout.widget.Barrier
                android:id="@+id/barrier"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:barrierDirection="bottom"
                app:constraint_referenced_ids="food_add_food_button" />

            <TextView
                android:id="@+id/title_food_add_description_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:paddingStart="@dimen/padding_large"
                android:paddingEnd="@dimen/padding_large"
                android:paddingBottom="@dimen/padding_ordinary"
                android:text="@string/e_description"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
                app:layout_constraintEnd_toEndOf="@+id/end_vertical_guideline"
                app:layout_constraintStart_toStartOf="@id/start_vertical_guideline"
                app:layout_constraintTop_toBottomOf="@+id/barrier" />

            <TextView
                android:id="@+id/food_add_description_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
                app:layout_constraintEnd_toEndOf="@+id/end_vertical_guideline"
                app:layout_constraintStart_toStartOf="@id/start_vertical_guideline"
                app:layout_constraintTop_toBottomOf="@+id/title_food_add_description_text"
                tools:text="@string/e_description" />

            <TextView
                android:id="@+id/title_food_add_benefit_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:paddingStart="@dimen/padding_large"
                android:paddingTop="@dimen/padding_ordinary"
                android:paddingEnd="@dimen/padding_large"
                android:paddingBottom="@dimen/padding_ordinary"
                android:text="@string/e_benefit"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
                app:layout_constraintEnd_toEndOf="@+id/end_vertical_guideline"
                app:layout_constraintStart_toStartOf="@id/start_vertical_guideline"
                app:layout_constraintTop_toBottomOf="@+id/food_add_description_text" />

            <TextView
                android:id="@+id/food_add_benefit_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
                app:layout_constraintEnd_toEndOf="@+id/end_vertical_guideline"
                app:layout_constraintStart_toStartOf="@id/start_vertical_guideline"
                app:layout_constraintTop_toBottomOf="@+id/title_food_add_benefit_text"
                tools:text="@string/e_benefit" />

            <TextView
                android:id="@+id/title_food_add_harm_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:paddingStart="@dimen/padding_large"
                android:paddingTop="@dimen/padding_ordinary"
                android:paddingEnd="@dimen/padding_large"
                android:paddingBottom="@dimen/padding_ordinary"
                android:text="@string/e_harm"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
                app:layout_constraintEnd_toEndOf="@+id/end_vertical_guideline"
                app:layout_constraintStart_toStartOf="@id/start_vertical_guideline"
                app:layout_constraintTop_toBottomOf="@+id/food_add_benefit_text" />

            <TextView
                android:id="@+id/food_add_harm_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
                app:layout_constraintEnd_toEndOf="@+id/end_vertical_guideline"
                app:layout_constraintStart_toStartOf="@id/start_vertical_guideline"
                app:layout_constraintTop_toBottomOf="@+id/title_food_add_harm_text"
                tools:text="@string/e_harm" />

            <TextView
                android:id="@+id/title_food_add_use_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:paddingStart="@dimen/padding_large"
                android:paddingTop="@dimen/padding_ordinary"
                android:paddingEnd="@dimen/padding_large"
                android:paddingBottom="@dimen/padding_ordinary"
                android:text="@string/e_use_country"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
                app:layout_constraintEnd_toEndOf="@+id/end_vertical_guideline"
                app:layout_constraintStart_toStartOf="@id/start_vertical_guideline"
                app:layout_constraintTop_toBottomOf="@+id/food_add_harm_text" />

            <TextView
                android:id="@+id/food_add_use_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/padding_bottom_fragment"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
                app:layout_constraintEnd_toEndOf="@+id/end_vertical_guideline"
                app:layout_constraintStart_toStartOf="@id/start_vertical_guideline"
                app:layout_constraintTop_toBottomOf="@+id/title_food_add_use_text"
                tools:text="@string/e_use_country" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/favorites_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_large"
        android:contentDescription="@string/fab_description"
        android:layout_gravity="bottom|end"
        tools:srcCompat="@drawable/ic_favorite_36"
        app:tint="?attr/colorOnPrimary" />

</FrameLayout>